--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 404: how hung r u?
 
-<img src='img/complacency.JPG' alt='get back to work, you complacent piece of shit'>
+<img src='img/complacency.JPG' alt='get back to work, you complacent piece of shit' width=3000 height=2000>
