--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 404: how hung r u?
-
-<img src='img/complacency.JPG' alt='get back to work, you complacent piece of shit' width=600 height=400>
+<br>
+<img src='img/complacency.JPG' title = 'get back to work, you complacent piece of shit' alt='get back to work, you complacent piece of shit' width=600 height=400>
